Fix incut tag when there are two iframes one by one on the page. Add justify align to article

--- a/iwg_blog/assets/blog/scss/templates/partials/article/_article.scss
+++ b/iwg_blog/assets/blog/scss/templates/partials/article/_article.scss
@@ -125,6 +125,14 @@
             @include max-screen($M_XSM) {
                 margin-bottom: 30px;
             }
+
+            $justify-selector: "*";
+            @for $i from 1 through 6 {
+                $justify-selector: $justify-selector + ":not(h#{$i})";
+            }
+            #{$justify-selector} {
+                text-align: justify;
+            }
         }
         &-text,
         &-incut {
